[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/main_menu/Login.gd" type="Script" id=1]

[node name="Login" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_right = -1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1.29235
margin_bottom = 1.29236
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
margin_left = 50.0
margin_top = 50.0
margin_right = 974.0
margin_bottom = 550.0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 917.0
margin_bottom = 493.0
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
margin_left = 50.0
margin_top = 50.0
margin_right = 860.0
margin_bottom = 436.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 142.0
margin_right = 810.0
margin_bottom = 166.0
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 140.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Login"

[node name="Login" type="LineEdit" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 144.0
margin_right = 810.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.74

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 170.0
margin_right = 810.0
margin_bottom = 194.0
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_top = 5.0
margin_right = 140.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Password:"

[node name="Password" type="LineEdit" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 144.0
margin_right = 810.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.74

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 198.0
margin_right = 810.0
margin_bottom = 243.0
custom_constants/margin_top = 25

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/MarginContainer"]
margin_top = 25.0
margin_right = 810.0
margin_bottom = 45.0
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer3"]
visible = false
margin_right = 199.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer3"]
visible = false
margin_right = 267.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="Button" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer3"]
margin_left = 151.0
margin_right = 251.0
margin_bottom = 20.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 6
text = "Login"

[node name="Button2" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer3"]
visible = false
margin_left = 354.0
margin_right = 454.0
margin_bottom = 20.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 6
text = "Register"

[node name="LinkButton" type="LinkButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer3"]
margin_left = 558.0
margin_right = 659.0
margin_bottom = 20.0
size_flags_horizontal = 6
text = "Link To Register"

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="AcceptDialog" type="AcceptDialog" parent="."]
margin_left = 451.032
margin_top = 246.84
margin_right = 564.032
margin_bottom = 321.84
dialog_text = "Invalid data
Unable to login"
[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer3/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer3/LinkButton" to="." method="_on_LinkButton_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
